tasks/theme/sldocs.css
/* ... */
nav.toc li{
  position: relative;
}
nav.toc >ul {
  width: calc(100% - 2px);
} 
/* Top-level spans - match product name link styling */
nav.toc > ul > li > span {
  color: #26282C;
  font-weight: 400;
  font-size: 14px;
  line-height: 22px;
  padding-left: 16px;
  cursor: pointer;
}

/* Task view: Make ALL top-level category headings blue/uppercase */
nav.toc.task-view > ul > li > span {
  color: var(--SL-blue05);
  font-weight: 700;
  font-size: 13px;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  padding-top: 14px;
  padding-bottom: 6px;
}

/* Task view: top-level links (landing pages) */
nav.toc.task-view > ul > li > a {
  color: var(--SL-blue05) !important;
  font-weight: 700;
  font-size: 13px;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  padding-top: 14px;
  padding-bottom: 6px;
}

/* Product view: category headers (topicheads) */
nav.toc:not(.task-view) > ul > li > span {
  font-size: 11px;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  color: #6B7280;
  padding: 14px 16px 4px;
  cursor: default;
  pointer-events: none;
}

nav.toc:not(.task-view) > ul > li:first-of-type > span {
  padding-top: 8px;
}

/* Product view: Make product names blue */
nav.toc:not(.task-view) > ul > li > ul > li > a {
  color: var(--SL-blue05) !important;
  font-weight: 700;
  font-size: 13px;
  letter-spacing: 0.3px;
  padding-top: 14px;
  padding-bottom: 6px;
}

/* Section icons for top-level nav headings */
.nav-section-icon {
  width: 16px;
  height: 16px;
  flex-shrink: 0;
  vertical-align: -2px;
  margin-right: 4px;
}

/* Hide expand/collapse arrows on top-level nav items */
nav.toc > ul > li.navparent > a:first-child:before,
nav.toc > ul > li.navparent > span:first-child:before,
nav.toc > ul > li.navexpand > a:first-child:before,
nav.toc > ul > li.navexpand > span:first-child:before {
  display: none !important;
}

/* Nav toggle: using ::before pseudo-elements (see navparent rules above) */
.nav-toggle {
  display: none;
}

.sidenav_element li.active >a ,.sidenav_element li.active >span{
  background-color: var(--nav-bgcolor-active);
  border-left: var(--nav-border-active);
  color: var(--nav-textcolor-active);
  /* font-weight: 800; */
}
.sidenav_element >ul {
  width: 100%;
}
.navresizerelement{
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  background-color:var(--nav-bgcolor);
  width: 2px;
  cursor: ew-resize;
}
.navresizerelement:hover{
  background-color: var(--c1-blue3) !important;
}
/* nav.toc  li a:hover ,nav.toc  li span:hover{
  background-color: var(--nav-bgcolor-active);
  border-left: var(--nav-border-active);
  font-weight: 700;
} */
nav.toc li >a ,nav.toc li >span{
  border-left: none;
}
/* nav.toc li > a:before, nav.toc li > span:before  { 
  content: "    \f078";
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  font-size: 80%;
  display: inline-block;
  padding-right: 1ch;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}  */

nav.toc li.navparent > a:first-child:before, nav.toc li.navparent > span:first-child:before  {
  content: "";
  display: inline-block;
  background-image: url(https://d3132s9xzuu9s8.cloudfront.net/k/img/chevron-right-icon.svg);
  background-size: contain;
  background-repeat: no-repeat;
  width: 12px;
  height: 12px;
  margin-right: 5px;
  vertical-align: middle;
}
nav.toc li.navexpand > a:first-child:before, nav.toc li.navexpand > span:first-child:before   {
  background-image: url(https://d3132s9xzuu9s8.cloudfront.net/k/img/chevron-down-icon.svg);
}
/* nav.toc li.navparent > a:first-child:before, nav.toc li.navparent > span:first-child:before , nav.toc li.navexpand > a:first-child:before, nav.toc li.navexpand > span:first-child:before  {
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  font-size: 80%;
  display: inline-block;
  width: 18px;
  height: 24px; 
  padding-right: 5px;
  padding-left: 4px;  
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
} */
/* nav.toc li.navparent:not(.navexpand):has(> ul[style*="display: none"]) > a:first-child:before, 
nav.toc li.navparent:not(.navexpand):has(> ul[style*="display: none"]) > span:first-child:before{
  background-image: url(https://d3132s9xzuu9s8.cloudfront.net/k/img/chevron-right-icon.svg);
}
/* ... */

